# OSS_AAP

./: .gitignore  CMakeLists.txt  README.md  test.sh
Exe_ServiceCreator/: CMakeLists.txt
Exe_ServiceCreator/idl/: bpp_si_servicecreator_common.idl  bvp_si_servicecreator_common.idl  cg_si_servicecreator_common.idl  ebs_si_servicecreator_common.idl  evls_si_servicecreator_common.idl  fp_si_servicecreator_common.idl  gpv_si_servicecreator_common.idl  impl_type_accel.idl  impl_type_accelwithcovariance.idl  impl_type_accelwithcovariancestamped.idl  impl_type_clearroute_response.idl  impl_type_clock.idl  impl_type_double_36.idl  impl_type_duration.idl  impl_type_header.idl  impl_type_int8_vector.idl  impl_type_laneletmapbin.idl  impl_type_laneletprimitive.idl  impl_type_laneletprimitive_vector.idl  impl_type_laneletsegment.idl  impl_type_laneletsegment_vector.idl  impl_type_lateraloffset.idl  impl_type_mapmetadata.idl  impl_type_objectclassification.idl  impl_type_objectclassification_label.idl  impl_type_objectclassification_vector.idl  impl_type_occupancygrid.idl  impl_type_odometry.idl  impl_type_operationmodestate.idl  impl_type_operationmodestate_mode.idl  impl_type_point.idl  impl_type_point32.idl  impl_type_point32_vector.idl  impl_type_pointcloud2.idl  impl_type_pointfield.idl  impl_type_pointfield_datatype.idl  impl_type_pointfield_vector.idl  impl_type_polygon.idl  (+51 more)
Exe_behaviorpathplanner/: CMakeLists.txt
Exe_behaviorpathplanner/OSS_BPP/: CMakeLists.txt  README.md
Exe_behaviorpathplanner/OSS_BPP/apps/behavior_path_planner/: CMakeLists.txt
Exe_behaviorpathplanner/OSS_BPP/apps/behavior_path_planner/autoware_behavior_path_planner/include/: planner_manager.hpp
Exe_behaviorpathplanner/OSS_BPP/apps/behavior_path_planner/autoware_behavior_path_planner/src/: main.cpp  planner_manager.cpp
Exe_behaviorpathplanner/OSS_BPP/apps/behavior_path_planner/autoware_behavior_path_planner_common/: CMakeLists.txt
Exe_behaviorpathplanner/OSS_BPP/apps/behavior_path_planner/autoware_behavior_path_planner_common/include/autoware/behavior_path_planner_common/: data_manager.hpp  parameters.hpp
Exe_behaviorpathplanner/OSS_BPP/apps/behavior_path_planner/autoware_behavior_path_planner_common/include/autoware/behavior_path_planner_common/utils/: path_utils.hpp  utils.hpp
Exe_behaviorpathplanner/OSS_BPP/apps/behavior_path_planner/autoware_behavior_path_planner_common/include/autoware/behavior_path_planner_common/utils/drivable_area_expansion/: static_drivable_area.hpp
Exe_behaviorpathplanner/OSS_BPP/apps/behavior_path_planner/autoware_behavior_path_planner_common/src/utils/: path_utils.cpp  utils.cpp
Exe_behaviorpathplanner/OSS_BPP/apps/behavior_path_planner/autoware_behavior_path_planner_common/src/utils/drivable_area_expansion/: static_drivable_area.cpp
Exe_behaviorpathplanner/OSS_BPP/apps/common/: CMakeLists.txt
Exe_behaviorpathplanner/OSS_BPP/apps/common/motion_utils/: CMakeLists.txt
Exe_behaviorpathplanner/OSS_BPP/apps/common/motion_utils/include/autoware/motion_utils/trajectory/: trajectory.hpp
Exe_behaviorpathplanner/OSS_BPP/apps/common/motion_utils/src/: trajectory.cpp
Exe_behaviorpathplanner/OSS_BPP/apps/common/rosless_utils/: CMakeLists.txt
Exe_behaviorpathplanner/OSS_BPP/apps/common/rosless_utils/include/rosless/: drivable_area.hpp
Exe_behaviorpathplanner/OSS_BPP/apps/common/rosless_utils/include/rosless/utils/: bpp_path_utils.hpp  resample.hpp
Exe_behaviorpathplanner/OSS_BPP/apps/common/rosless_utils/src/: bpp_path_utils.cpp  drivable_area.cpp  resample.cpp
Exe_behaviorpathplanner/OSS_BPP/apps/route_handler/: CMakeLists.txt
Exe_behaviorpathplanner/OSS_BPP/apps/route_handler/include/autoware/route_handler/: route_handler.hpp
Exe_behaviorpathplanner/OSS_BPP/apps/route_handler/src/: route_handler.cpp
Exe_behaviorpathplanner/OSS_BPP/include/common/: common_types.hpp
Exe_behaviorpathplanner/OSS_BPP/reference_IO/: behavior_path_planner.txt
Exe_behaviorvelocityplanner/: CMakeLists.txt
Exe_elasticbandsmoother/: CMakeLists.txt
Exe_missionplanner/: CMakeLists.txt
Exe_motionvelocityplanner/: CMakeLists.txt
Exe_obstaclecruiseplanner/: CMakeLists.txt  SCENARIO_HANDLER_IMPLEMENTATION.md
Exe_obstaclecruiseplanner/OSS_TEST_HELPER/: CMakeLists.txt  README.md
Exe_obstaclecruiseplanner/OSS_TEST_HELPER/include/: types.hpp
Exe_obstaclecruiseplanner/OSS_TEST_HELPER/src/: jsonl_reader.cpp  jsonl_reader.hpp  jsonl_writer.cpp  jsonl_writer.hpp  main.cpp  pretty_json_single_line_serializer.hpp  processor.cpp  processor.hpp  trigger.cpp  trigger.hpp
Exe_pathoptimizer/: CMakeLists.txt
Exe_pathoptimizer/Path_Optimizer_ros2/: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  ROLLBACK_INSTRUCTIONS.md  code_transfer_example.md  compare_ros2_vs_standalone.py  convert_ros_to_csv.py  ros2_vs_standalone_comparison.txt  run_all_scenarios.sh  run_no_object.sh  run_with_object.sh  test_left_bound.csv  test_odometry.csv  test_path.csv  test_path_from_ros.csv  test_right_bound.csv  validate_implementation.py  visualize_paths.py
Exe_pathoptimizer/Path_Optimizer_ros2/md_etc/: OBJECT_HANDLING_ANALYSIS.md  ROS2_VS_STANDALONE_ARCHITECTURE.md  ROS2_VS_STANDALONE_COMPARISON.md  SPLINE_IMPLEMENTATION_SUMMARY.md  WARM_START_IMPLEMENTATION.md  quick_reference.sh
Exe_pathoptimizer/Path_Optimizer_ros2/src/: main.cpp  mpt_optimizer.cpp  mpt_optimizer.cpp.osqp_backup  osqp_interface.cpp  osqp_interface_old.cpp  path_optimizer.cpp  path_optimizer_runner.cpp  replan_checker.cpp
Exe_pathoptimizer/Path_Optimizer_ros2/test_files_in_ros2/: input_odometry.sh  input_odometry_std.sh  input_path_no_object.sh  input_path_std.sh  input_path_with_object.sh  output_opt_path_no_object.txt  output_opt_path_std.txt  output_opt_path_with_object.txt
Exe_pathoptimizer/Path_Optimizer_ros2/test_files_in_standalone/: input_odometry.csv  input_odometry_std.csv  input_path_no_object.csv  input_path_std.csv  no_object_left_bound.csv  no_object_right_bound.csv  std_left_bound.csv  std_right_bound.csv  with_object_left_bound.csv  with_object_right_bound.csv
tools/: install_lanelet2_libs.sh
(+2330 files in other folders)
